WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
283609
visionOS Internal Unified build fix
https://bugs.webkit.org/show_bug.cgi?id=283609
Summary
visionOS Internal Unified build fix
Jonathan Bedard
Reported
2024-11-22 18:29:28 PST
Add a few headers to fix the visionOS Internal unified build.
Attachments
Add attachment
proposed patch, testcase, etc.
Jonathan Bedard
Comment 1
2024-11-22 18:29:52 PST
rdar://140439859
Jonathan Bedard
Comment 2
2024-11-22 18:32:01 PST
Pull request:
https://github.com/WebKit/WebKit/pull/37065
EWS
Comment 3
2024-11-22 18:34:32 PST
Committed
286993@main
(3fd32c9e90dd): <
https://commits.webkit.org/286993@main
> Reviewed commits have been landed. Closing PR #37065 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug