visionOS Internal Unified build fix https://bugs.webkit.org/show_bug.cgi?id=283609 rdar://140439859

Unreviewed build fix.

* Source/WebCore/Modules/webxr/XRGPUSubImage.cpp:
* Source/WebCore/Modules/webxr/XRGPUSubImage.h:

Canonical link: https://commits.webkit.org/286993@main